[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-history-toolkit"
version = "0.3.0"
description = "Audit, archive, and migrate local Codex conversation history safely"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = "MIT"
license-files = ["LICENSE"]
keywords = ["codex", "conversation-history", "archive", "migration", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]

[project.scripts]
codex-history = "codex_history.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
